tdf#57589 writerfilter: support hash-encoded colors

Previously, a hash-encoded value would simply fail to zero
and thus the color would be dark black.

The unit test covers two conditions. Paragraph 1 has a valid
encoding, and pararaph 2 has an invalid coding (which is
ignored and fails to COL_AUTO).

Change-Id: I68940f5c4b0975a87feb6cab8fb3572b7546a077
Reviewed-on: https://gerrit.libreoffice.org/59295
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>